adjusted service worker

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
 
     </header>
+    <form>
 
         <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black" required>
         <select id="dd" required>
@@ -34,9 +35,10 @@
             <option>--select--</option>
         </select>
 
-        <button id="btn">submit</button>
 
 
+    </form>
+    <button id="btn">submit</button>
 
     <!-- Main -->
 
