--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
             <span class="icon fa-diamond"></span>
         </div>
         <div class="content">
+            <h1>mock currency converter</h1>
 
         </div>
 
     </header>
     <form>
 
-        <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black" required>
+        <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black; font-size: large;" required>
         <select id="dd" required>
             <option>--select--</option>
         </select>
-        <input type="number" name="second" id="second" placeholder="result" style="color: black" readonly>
+        <input type="number" name="second" id="second" placeholder="result" style="color: black; font-size: large;" readonly>
         <select id="dd2" required>
             <option>--select--</option>
         </select>
