it works offline

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </header>
     <form>
 
-        <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black; font-size: large;" required>
+        <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black; font-size: large; text-align: center" required>
         <select id="dd" required>
             <option>--select--</option>
         </select>
-        <input type="number" name="second" id="second" placeholder="result" style="color: black; font-size: large;" readonly>
+        <input type="number" name="second" id="second" placeholder="result" style="color: black; font-size: large;text-align: center" readonly>
         <select id="dd2" required>
             <option>--select--</option>
         </select>
