--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>ALC </title>
     <meta charset="utf-8" />
@@ -9,64 +10,64 @@
     <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 
 </head>
+
 <body class="is-preload">
 
-<!-- Wrapper -->
-<div id="wrapper">
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-    <!-- Header -->
-    <header id="header">
-        <div class="logo">
-            <span class="icon fa-diamond"></span>
-        </div>
-        <div class="content">
-            <h1>mock currency converter</h1>
+        <!-- Header -->
+        <header id="header">
+            <div class="logo">
+                <span class="icon fa-diamond"></span>
+            </div>
+            <div class="content">
+                <h1>mock currency converter</h1>
 
-        </div>
+            </div>
 
-    </header>
-    <form>
+        </header>
 
-        <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black; font-size: large; text-align: center" required>
-        <select id="dd" required>
+<div>            <input type="number" name="first" id="first" placeholder="enter the figure" style="color: black; font-size: large; text-align: center">
+            <select id="dd" required>
             <option>--select--</option>
         </select>
-        <input type="number" name="second" id="second" placeholder="result" style="color: black; font-size: large;text-align: center" readonly>
-        <select id="dd2" required>
+            <input type="number" name="second" id="second" placeholder="result" style="color: black; font-size: large;text-align: center">
+            <select id="dd2" required>
             <option>--select--</option>
         </select>
-
-
-
-    </form>
-    <button id="btn">submit</button>
-
-    <!-- Main -->
-
-
-
-
-    <!-- Footer -->
-    <footer id="footer">
-        <p class="copyright">&copy; <a href="https://geekman.com.ng">damotech</a>.</p>
-    </footer>
+            <button id="btn">submit</button>
 
 </div>
 
-<!-- BG -->
-<div id="bg"></div>
+          <!-- Main -->
 
-<!-- Scripts -->
-<script src="js/index.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/browser.min.js"></script>
-<script src="js/breakpoints.min.js"></script>
-<script src="js/util.js"></script>
-<script src="js/main.js"></script>
+
+
+
+        <!-- Footer -->
+        <footer id="footer">
+            <p class="copyright">&copy; <a href="https://geekman.com.ng">damotech</a>.</p>
+        </footer>
+
+    </div>
+
+    <!-- BG -->
+    <div id="bg"></div>
+
+    <!-- Scripts -->
+    <script src="js/index.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/breakpoints.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/testing.js"></script>
 
 
 
 </body>
+
 </html>
 
 </html>
